Fix title text overflow by modifying css media query

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -578,7 +578,7 @@ pre code {
     margin-bottom: 30px;
   }
   .promo .title {
-    font-size: 66px;
+    font-size: 40px;
   }
   .promo .meta {
     margin-top: 60px;
